# Pearl-ur5e

./: .gitmodules  README.md  deformed recorded_demo Tue Jan 21 10:48:49 2020.h5  file.h5  recorded_demo Thu Dec 26 12:19:16 2019.h5  recorded_demo Tue Nov 26 18:52:31 2019.h5
MetaLfD-fork/: README.md
MetaLfD-fork/data/: test.h5  (+1 more)
brendan_ur5e/: CMakeLists.txt  package.xml
brendan_ur5e_dummy_gripper_moveit_generated/: .setup_assistant  CMakeLists.txt
brendan_ur5e_gripper_moveit_generated/: .setup_assistant
brendan_ur5e_moveit_config/: .setup_assistant  CMakeLists.txt
devel/: .catkin  .rosinstall  local_setup.sh
h5 files/: bad preprocessed recorded_demo Tue Jan 21 10:48:49 2020.h5  planned execution.h5  preprocessedrecorded_demo Tue Jan 21 10:48:49 2020.h5  recorded_demo Mon Aug 23 10:35:43 2021.h5  recorded_demo Mon Aug 23 10:40:11 2021.h5  recorded_demo Sat Jan 18 14:17:34 2020.h5  recorded_demo Thu Dec 26 14:14:19 2019.h5  recorded_demo Tue Dec 24 15:00:21 2019.h5  (+1 more)
src/ur5e_workstation/: CMakeLists.txt  package.xml
src/ur5e_workstation/include/: manipulation_class.hpp
src/ur5e_workstation/launch/: ur5e_bringup.launch  ur5e_upload.launch
src/ur5e_workstation/rviz/: workstation.rviz
src/ur5e_workstation/src/functions/manipulation/: create_object.cpp  pose_goal.cpp
src/ur5e_workstation/src/functions/perception/: concatenate_cloud.cpp  perception_class.cpp
src/ur5e_workstation/src/nodes/: gripper_node.cpp
src/ur5e_workstation/urdf/: ikfast61_manipulator.cpp  ur5e.urdf.xacro  ur5e_joint_limited_robotiq_2f_85.dae  ur5e_joint_limited_robotiq_2f_85.urdf
(+751 files in other folders)
